<resources>
    <string name="app_name">PLPLA</string>
    <string name="welcome">Licence Sciences et technologies</string>
    <string name="Suivant">Suivant</string>
    <string name="emplacement1S1">Maths Fondement : Semestre 1</string>
    <string name="emplacement2S1">Maths méthode : approche continue</string>
    <string name="ip_address">ip du serveur (10.0.2.2 si vous utilisez l\'émulateur)</string>
    <string name="nom_hint">Nom</string>
    <string name="prenom_hint">Prénom</string>
    <string name="deroulementPlus">+</string>
    <string name="deroulementMoins">-</string>
    <string name="parcours">Mon parcours</string>
    <string name="Enregistrer">Enregistrer</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="reinitialiser">Parcours réinitialiser</string>
    <string name="parcoursvide">Aucun parcours enregistré</string>
    <string name="chimieS1">Chimie S1</string>
    <string name="StructureMicroscopique">Structure Microscopique de la Matiere</string>
    <string name="title_activity_main_navigation">mainNavigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">MohamedBenabdelkrim@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="recherche">Recherche</string>



    <!-- S1 -->
    <string name="enjeux">UE amenagements : Math enjeux 1</string>
    <string name="competences">UE Competences transversales</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Mon Profil</string>
    <string name="parcours_partage"> parcours partage </string>
    <string name="aucun_partage" > <i>aucun parcours partagé ! </i> </string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="Portail">Portail</string>
    <string name="connect">Vous êtes connecté au serveur</string>
    <string name="disconnect">Vous avez été déconnecté du serveur</string>
    <string name="connect_erreur">Erreur lors de la connexion, Vous n\'êtes pas connecté</string>
    <string name="Profil">Mon Profil</string>
    <string name="Nom">Baroudi</string>
    <string name="Prenom">Ibrahim</string>
    <string name="Mail">Mail</string>
    <string name="Modifier">Modifier</string>
    <string name="saved_on_server">Le serveur a bien enregistré vos choix</string>
    <string name="Edit">Edit</string>
    <string name="Save">Save</string>

    <string name="semestre">Semestre 1</string>
    <string name="semestre2">Semestre 2</string>
    <string name="semestre3">Semestre 3</string>
    <string name="semestre4">Semestre 4</string>



</resources>
