<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/semestre2"
            android:textSize="32dp"
            android:textAlignment="center"
            android:paddingTop="10dp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp">

            <LinearLayout
                android:id="@+id/dynamicLayoutContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </androidx.cardview.widget.CardView>

        <LinearLayout android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal">

            <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:id="@+id/boutonEnregistrer2"
                android:text="@string/Enregistrer"/>

            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/boutonSemestre3"
                android:text="@string/semestre3"/>

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
